tests/sources/invalid/imports/export_visibility_private.fire
// Private module symbol should not be importable.

import @firescript/std.io.println;
import visibility_provider.hiddenValue;  //~ ERROR FS-PARSE-0003 @28

println(hiddenValue);  //~ ERROR FS-PARSE-0003 @9
